prevent ui jump

--- a/docs/_sass/_search-bar.scss
+++ b/docs/_sass/_search-bar.scss
@@ -147,6 +147,7 @@
 .lhn-search-input-wrapper {
     height: 52px;
     min-height: 52px;
+    background-color: var(--color-appBG);
 }
 
 .search-no-results,
